err/opendig.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cement'...
Listing './lib/python3.5/site-packages/cement/core'...
Listing './lib/python3.5/site-packages/cement/ext'...
Listing './lib/python3.5/site-packages/cement/utils'...
Listing './lib/python3.5/site-packages/cement-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/dns'...
Compiling './lib/python3.5/site-packages/dns/dnssec.py'...
***   File "./lib/python3.5/site-packages/dns/dnssec.py", line 117
    raise UnsupportedAlgorithm, 'unsupported algorithm "%s"' % algorithm
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/edns.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (edns.py, line 117)
Compiling './lib/python3.5/site-packages/dns/entropy.py'...
***   File "./lib/python3.5/site-packages/dns/entropy.py", line 104
    if size > 4294967296L:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/message.py'...
***   File "./lib/python3.5/site-packages/dns/message.py", line 176
    return '<DNS message, ID ' + `self.id` + '>'
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/name.py'...
***   File "./lib/python3.5/site-packages/dns/name.py", line 171
    h = 0L
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/node.py'...
***   File "./lib/python3.5/site-packages/dns/node.py", line 172
    raise ValueError, 'replacement is not an rdataset'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/query.py'...
***   File "./lib/python3.5/site-packages/dns/query.py", line 118
    except select.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/rdataclass.py'...
***   File "./lib/python3.5/site-packages/dns/rdataclass.py", line 103
    text = 'CLASS' + `value`
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/rdatatype.py'...
***   File "./lib/python3.5/site-packages/dns/rdatatype.py", line 213
    text = 'TYPE' + `value`
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Compiling './lib/python3.5/site-packages/dns/rdtypes/ANY/LOC.py'...
***   File "./lib/python3.5/site-packages/dns/rdtypes/ANY/LOC.py", line 22
    _pows = (1L, 10L, 100L, 1000L, 10000L, 100000L, 1000000L, 10000000L,
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Compiling './lib/python3.5/site-packages/dns/renderer.py'...
***   File "./lib/python3.5/site-packages/dns/renderer.py", line 221
    ednsflags &= 0xFF00FFFFL
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/tokenizer.py'...
***   File "./lib/python3.5/site-packages/dns/tokenizer.py", line 491
    if value < 0 or value > 4294967296L:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/tsig.py'...
***   File "./lib/python3.5/site-packages/dns/tsig.py", line 96
    long_time = time + 0L
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/ttl.py'...
***   File "./lib/python3.5/site-packages/dns/ttl.py", line 39
    total = 0L
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dns/zone.py'...
***   File "./lib/python3.5/site-packages/dns/zone.py", line 874
    except dns.exception.SyntaxError, detail:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dnspython-1.11.1.egg-info'...
Listing './lib/python3.5/site-packages/namecoinrpc'...
Listing './lib/python3.5/site-packages/opendig'...
Listing './lib/python3.5/site-packages/opendig-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
